etc/tests/fuzz/errors/type/ffi-shadowing.nshape
shape type-ffi-shadowing {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "cannot assign string literal to int"
  source ny <<'NY'
use std.core

def int value = "not an int"
print(value)
NY
}
